<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_inicial"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="es.ulpgc.eite.clean.mvp.sample.inicial.InicialView"
    tools:showIn="@layout/activity_inicial">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="#5858FA"
        android:gravity="center">
        <!--android:background="#3D9964"-->


        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>

        <LinearLayout
            android:id="@+id/btnPintura"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#FFFFFF"
            android:clickable="true"
            android:padding="16dp"
            android:orientation="horizontal"
            android:layout_weight="1"
            android:paddingLeft="40dp"
            android:paddingRight="@dimen/activity_horizontal_margin"
            >
            <ImageView
                android:id="@+id/iconoBtnPintura"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="5dp"
                android:adjustViewBounds="true"
                android:maxHeight="100dp"
                android:maxWidth="100dp"
                android:scaleType="fitCenter"
                android:src="@mipmap/ic_cuadro"/>

            <TextView
                android:id="@+id/textoBtnPintura"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:textSize="24sp"
                android:paddingRight="30dp"
                android:paddingLeft="30dp"
                android:gravity="center"
                android:text="Pintura" />
        </LinearLayout>
        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>
        <LinearLayout
            android:id="@+id/btnArquitectura"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#FFFFFF"
            android:clickable="true"
            android:padding="16dp"
            android:orientation="horizontal"
            android:layout_weight="1"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin">

            <ImageView
                android:id="@+id/iconoBtnArquitectura"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="5dp"
                android:adjustViewBounds="true"
                android:maxHeight="100dp"
                android:maxWidth="100dp"
                android:scaleType="fitCenter"
                android:src="@mipmap/ic_arqui"/>

            <TextView
                android:id="@+id/textoBtnArquitectura"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:textSize="24sp"
                android:paddingRight="30dp"
                android:paddingLeft="30dp"
                android:gravity="center"
                android:text="Arquitectura" />
        </LinearLayout>

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>
        <LinearLayout
            android:id="@+id/btnEscultura"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#FFFFFF"
            android:clickable="true"
            android:padding="16dp"
            android:orientation="horizontal"
            android:layout_weight="1"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin">

            <ImageView
                android:id="@+id/iconoBtnEscultura"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="5dp"
                android:adjustViewBounds="true"
                android:maxHeight="100dp"
                android:maxWidth="100dp"
                android:scaleType="fitCenter"
                android:src="@mipmap/ic_escultura"/>

            <TextView
                android:id="@+id/textoBtnEscultura"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:textSize="24sp"
                android:paddingRight="30dp"
                android:paddingLeft="30dp"
                android:gravity="center"
                android:text="Escutura" />
        </LinearLayout>

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>

    </LinearLayout>
</RelativeLayout>
