<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_autores"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="es.ulpgc.eite.clean.mvp.sample.autores.AutoresView"
    tools:showIn="@layout/activity_autores">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="#81BEF7"
        android:gravity="center_horizontal">
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <ListView
            android:id="@+id/listaAutores"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
             />
        <android.support.design.widget.FloatingActionButton
            android:id="@+id/btnAddAutor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:src="@mipmap/ic_add"
            app:backgroundTint="@color/colorPrimary" />
        </FrameLayout>
    </LinearLayout>


</RelativeLayout>
